--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "build": "next build",
     "start": "next start"
   },
+  "engines": {
+    "node": ">=12.16.2",
+    "npm": ">=6.14.4"
+  },
   "dependencies": {
     "next": "9.3.5",
     "react": "16.13.1",
