--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "next start"
   },
   "engines": {
-    "node": ">=12.16.2",
-    "npm": ">=6.14.4"
+    "npm": "6.13.4",
+    "node": "12.15.0"
   },
   "dependencies": {
     "next": "9.3.5",
