--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "node": "12.15.0"
   },
   "dependencies": {
+    "@types/mongodb": "^3.5.10",
+    "mongodb": "^3.5.6",
     "next": "9.3.5",
     "react": "16.13.1",
     "react-dom": "16.13.1"
