--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   },
   "dependencies": {
     "@types/mongodb": "^3.5.10",
+    "@types/uuid": "^7.0.3",
     "mongodb": "^3.5.6",
     "next": "9.3.5",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
     "@types/node": "^13.13.2",
