Specify Node and NPM version greater than or equal to mentioned

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --fix"
   },
   "engines": {
-    "npm": "6.13.4",
-    "node": "12.15.0"
+    "node": ">=12.15.0",
+    "npm": ">=6.13.4"
   },
   "dependencies": {
     "mongodb": "^3.5.6",
