--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "next": "9.3.5",
     "nookies": "^2.2.3",
     "prop-types": "^15.7.2",
+    "pusher": "^3.0.1",
+    "pusher-js": "^6.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "uuid": "^7.0.3"
