--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --fix"
+    "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --fix",
+    "test": "jest --watch"
   },
   "engines": {
     "node": ">=12.15.0",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@now/node": "^1.5.1",
+    "@types/jest": "^25.2.3",
     "@types/mongodb": "^3.5.10",
     "@types/node": "^13.13.2",
     "@types/react": "^16.9.34",
@@ -35,7 +37,11 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
+    "jest": "^26.0.1",
+    "mongodb-memory-server": "^6.6.1",
+    "node-mocks-http": "^1.8.1",
     "prettier": "^2.0.5",
+    "ts-jest": "^26.0.0",
     "typescript": "^3.8.3"
   }
 }
